# Chatbot-platform

./: .env.dev  .env.prod  .gitignore  README.md  debug_query_db.py  docker-compose.yml  files.txt  gitnote.txt  note.txt  something.py  vectordb.txt
ai/: 2_files.ipynb  John  requirements.txt  run.py  vector_db_data_processing.ipynb
ai/BERT/: test.ipynb
ai/ai_tools/: __init__.py  forms.py  models.py  routes.py  schema.py
ai/ai_tools/BERT/: test.ipynb
ai/ai_tools/NLP_classifier/: __init__.py  linearsvc_pipeline.joblib  model_tests.ipynb  test.ipynb  text_classifier_pipeline.pkl
ai/ai_tools/classifier_app/: .dockerignore  main.py  requirements.txt
ai/ai_tools/data_extractor/: README.md  __init__.py  __main__.py  run_extractor.py
ai/ai_tools/data_preprocessing/: AVL_TREES.ndjson  COMPOSITION_AND_AGGREGATION.ndjson  ENCAPSULATION.ndjson  MULTIWAY_TREES.ndjson  SOLID_PRINCIPLES.ndjson  UML_AND_CLASS_DIAGRAMS.ndjson  bigquery_sql.txt  data_cleaning.ipynb  qna_pairs.ipynb
ai/ai_tools/unit_extractor/: README.md  main.py  requirements.txt  tempCodeRunnerFile.py
ai/data extractor/: main.py
ai/data_extractor/: __init__.py  __main__.py  main.py  run_extractor.py
ai/instance/: site.db
ai/rag_data/: ICT283_cleaned_raws.txt
classifier_app/classifiers/: __init__.py  base_classifier.py
classifier_app/controllers/: __init__.py  classifier_controllers.py  home_controllers.py
classifier_app/databases/: __init__.py  base_db.py
classifier_app/domain/: __init__.py  base_db_queries.py  base_preprocessor.py  base_query.py
data extractor/: readme.txt
frontend/: package-lock.json  package.json
frontend/my-fe/: .dockerignore  Dockerfile  package-lock.json  package.json
poster/: poster-copy.md
ragbot/: .gitignore  A1-QandA.txt  Dockerfile  README.md  config.sh  controller.py  docker-entrypoint.sh  graph.py  handler.py  ingestion.py  init_run.sh  main.py  node.py  pyproject.toml  react.py  repository.py  req.txt  requirements.txt  reranker.py
ragbot/data/: ICT159_all.sqlite  ICT167_all.sqlite  ICT283_rag_memory.sqlite
ragbot/evals/: README.md  cases.jsonl  results.json  run_eval.py
ragbot/knowledge/: ICT159_ALL_CONTENT.txt  ICT167_ALL_CONTENT.txt  ICT283_ALL_CONTENT.txt  ICT283_cleaned_raws.txt
ragbot/prompts/: system_prompts.py
ragbot/tools/: knowledge_tools.py
ragbot/utils/: cosine.py
springboot_be/: Dockerfile  README.md  pom.xml
springboot_be/authorization-service/: pom.xml
springboot_be/base-service/: pom.xml
springboot_be/chat-service/: pom.xml
springboot_be/config-service/: pom.xml
springboot_be/discovery-service/: pom.xml
springboot_be/gateway-service/: pom.xml
springboot_be/personalization-service/: pom.xml
springboot_be/user-service/: pom.xml
synthetic_data_generator/: .gitignore  cleaner.py  generator.py  languagemodel.py  manager.py  prompts.py  pyproject.toml
synthetic_data_generator/generated_data/: train.jsonl  train_c.jsonl
unit_extractor/: tempCodeRunnerFile.py
unit_extractor/controllers/: __init__.py
unit_extractor/domain/: __init__.py
unit_extractor/extractors/: __init__.py  doc_extractor.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py
(+111 files in other folders)
