[project]
name = "ragbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-restful>=0.3.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-ollama>=0.3.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
]
