[project]
name = "ragbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-restful>=0.3.10",
    "ipython>=9.12.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.0",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-tavily>=0.2.17",
    "llama-cpp-python>=0.3.0",
    "sentence-transformers>=3.0.0",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "waitress>=3.0.0",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.8.0",
    "flashrank>=0.2.10",
    "numpy>=1.26",
]
