[project]
name = "synthetic-data-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.1",
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "xformers==0.0.28.post1",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
xformers = { index = "pytorch-cuda" }